--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,8 @@
         <title>¯\_(ツ)_/¯</title>
     </HEAD>
     <BODY>
-        {{#style}}
-        <link rel="stylesheet" type="text/css" href="{{url_for('dist', filename="styles/main.css")}}">
-        {{/style}}
-        <script type="text/javascript" src="{{url_for('dist', filename="scripts/libraries.js")}}"></script>
-        {{#script}}
-        <script type="text/javascript" src="{{url_for('dist', filename="scripts/main.js")}}"></script>
-        {{/script}}
-
-        {{message}}
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename="styles/main.css")}}">
+        <script type="text/javascript" src="{{url_for('static', filename="scripts/libraries.js")}}"></script>
+        <script type="text/javascript" src="{{url_for('static', filename="scripts/main.js")}}"></script>
     </BODY>
 </HTML>
